assets/css/style.css
/* Base Styles CSS Start */

@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
  
body {
    font-family: "Roboto", serif;
    scroll-behavior: smooth;
}
  
ol,
ul {
    margin: 0;
    padding: 0;
}
  
li {
    list-style: none;
}
  
a {
    text-decoration: none;
    cursor: pointer;
}
  
img {
    max-width: 100%;
}
  
/* Base Styles CSS End */


/* ///////////////////////////////////////////////////////////// */

/* Header Part CSS Start */

.navigation-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #1B1E23;
    padding: 1rem 5rem;
    font-size: 20px;
    position: fixed; /* Make the header stick to the top */
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
}

.header-logo {
    white-space: nowrap;
}

.header-logo img {
    max-width: 46px;
    padding-right: 0.2rem;
}

.header-logo a {
    color: #FEFEFE;
    font-size: 24px;
    font-weight: 700;
}

.nav-menu {
    flex: 1;
    display: flex;
    justify-content: center;
}

.nav-menu ul {
    display: flex;
    align-items: center;
    gap: 32px;
}

.nav-menu ul li {
    margin-left: 33px;
}

.nav-menu ul li a {
    cursor: pointer;
    color: #FEFEFE;
    font-weight: 500;
}
  
.auth-buttons {
    display: flex;
    align-items: center;
    margin-left: auto;
}

.auth-buttons ul {
    display: flex;
    align-items: center;
}

.auth-buttons ul li {
    margin-left: 20px;
}

.auth-buttons ul li a {
    cursor: pointer;
    color: #FEFEFE;
    font-weight: 500;
}


.sign-in-btn,
.sign-up-btn {
    padding: 15px 35px; /* Adjust padding to maintain width */
    display: flex;
    align-items: center; /* Center text vertically */
    border: 2px solid #FEFEFE;
    border-radius: 50px;
    white-space: nowrap;
}

.sign-up-btn {
    background: linear-gradient(180deg, #6C99F4 0%, #3F6FD1 100%);
}
/* Dropdown button styles */
.dropdown-button {
    display: none;
}

.dropdown-button button {
    background: none;
    border: none;
    color: #FEFEFE;
    font-size: 24px;
    cursor: pointer;
}

.dropdown-logo img {
    max-width: 46px;
}

.dropdown-close-button button {
    background: none;
    border: none;
    color: #FEFEFE;
    font-size: 24px;
    cursor: pointer;
}

.line-splitter {
    width: 100%;
    height: 2px;
    background: #FEFEFE;
    margin: 0px;

}

/* Only show these elements when menu is active */
.nav-menu:not(.show) .dropdown-logo img,
.nav-menu:not(.show) .dropdown-close-button button,
.nav-menu:not(.show) .line-splitter {
    display: none;
}

/* Show elements when menu is open OR during close animation */
.nav-menu.show .dropdown-logo img,
.nav-menu.show .dropdown-close-button button,
.nav-menu.show .line-splitter,
.nav-menu.hide .dropdown-logo img,
.nav-menu.hide .dropdown-close-button button,
.nav-menu.hide .line-splitter {
    display: block;
}



/* Header Part CSS End */

/* ///////////////////////////////////////////////////////////// */

/* Footer Part CSS Start */

.footer-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    background: #1B1E23;
    padding: 1.5rem 5rem;
    position: relative;
    width: 100%;
}

.footer-wrapper {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    background: #1B1E23;
    align-items: center;
    width: auto;
}

.footer-logo {
    white-space: nowrap;
    display: flex;
    align-items: center;
}

.footer-logo img {
    max-width: 30px;
    padding-right: 0.2rem;
}

.footer-logo a {
    color: #FEFEFE;
    font-size: 22px;
    font-weight: 700;
}

.footer-menu {
    white-space: nowrap;
}
.footer-menu ul {
    display: flex;
    flex-direction: row; 
    list-style: none;
    padding: 0;
    gap: 5rem;
}

.footer-menu > ul > li > a{
    color: #6C7275;
    font-weight: 700;
}

.footer-menu ul li ul {
    display: flex;
    flex-direction: column;
    gap: 0.2rem;
}

.footer-menu a {
    color: #FEFEFE;
    font-size: 20px;
    font-weight: 500;
}

.copyright {
    color: #FEFEFE;
    font-size: 14px;
    margin-top: 1rem;
    white-space: nowrap;
}

/* Footer Part CSS End */

/* ///////////////////////////////////////////////////////////// */

/* Index Part CSS Start */

#hero-section {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center; /* Align content to the top */
    height: 100vh; /* Full viewport height */
    overflow: hidden; /* Ensure the texture doesn't overflow */
    background-color: #1B1E23;
}
  
.hero-wrapper {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center; /* Align content to the top */
}
  
.hero-texture {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 1; /* Place the texture behind the container */
    display: flex;
    justify-content: center; /* Center content horizontally */
    align-items: center;
}

.hero-texture img {
    width: 100%;
    height: 100%;
    object-fit: cover; /* Ensure the texture covers the entire area */

}
  

  
.hero-container {
    display: flex;
    justify-content: center; /* Center content horizontally */
    align-items: center;
    position: relative;
    z-index: 2; /* Place the container above the texture */
    text-align: center; /* Center the content horizontally */
    width: 100%;
    height: 100%;
    padding: 2rem;
}


.hero-content h1 {
    font-size: 110px;
    color: #FEFEFE;
    font-weight: 700;
    margin-bottom: 1rem;
}
  
.hero-content p {
    font-size: 30px;
    color: #8A95AA;
    font-weight: 500;
    margin-bottom: 2.5rem;
}
  
.hero-upload-container {
    display: inline-flex;
    justify-content: right;
    background-color: #1E2229;
    border: .2rem solid #21252D;
    padding: .4rem;
    border-radius: 50px;
}

.hero-upload-content {
    background-color: #1B1E23;
    border-radius: 50px;
    padding: 1.5rem .8rem;
    white-space: nowrap;
}
  
.upload-button {
    padding: 0.9rem 2rem;
    font-size: 1rem;
    border: 2px solid #FEFEFE;
    border-radius: 50px;
    color: #FEFEFE;
    font-size: 18px;
    font-weight: 500;
    white-space: nowrap;
    margin-left: 8rem;
}

.upload-text {
    color: #8A95AA;
    font-size: 1rem;
    font-weight: 500;
    cursor: text;
    white-space: nowrap;
}




#features-section {
    min-height: 100vh; 
    overflow: hidden;
    background-color: #1B1E23;
}

.features-wrapper {
    width: 100%;
    padding: 4rem;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 2rem;
}

.features-header {
    text-align: center;
    color: #FEFEFE;
}

.features-header-underline {
    position: relative;
    display: inline-block;
}

.features-header-underline::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: -0.3em;
    width: 100%;
    height: 0.3em;
    background: linear-gradient(180deg, #6C99F4 0%, #3F6FD1 100%);
    clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
}

.features-container {
    padding: 1rem;
    grid-column-gap: 1.5rem;
    grid-row-gap: 1.5rem;
    grid-template-rows: auto;
    grid-template-columns: repeat(3, minmax(0, 1fr));
    grid-auto-columns: minmax(0, 1fr);
    display: grid;
    width: 100%;
}

.features-card {
    background-color: #1E2229;
    width: 100%;
    position: relative;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 1rem;
    gap: 1rem;
}

.features-card-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1; 
    width: 100%;
}

.features-card-content {
    text-align: left;
    padding: 1rem;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between; /* Ensure content is spaced evenly */
}

.features-header h2 {
    font-size: 48px;
    font-weight: bold;
    color: #FEFEFE;
}

.features-card-content h3 {
    font-size: 48px;
    color: #FEFEFE;
}

.features-card-content p {
    font-size: 1rem;
    line-height: 24px;
    max-width: 100%; /* Ensure text takes full width */
    color: #DCE1EC;
    margin: 0; /* Remove default margin */
    flex-grow: 1;
}


/* Index Part CSS End */

/* ///////////////////////////////////////////////////////////// */

